--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "AiLPHA大数据智能安全平台",
-  "name": "AiLPHA大数据智能安全平台",
+  "short_name": "智能平台",
+  "name": "智能平台",
   "icons": [
     {
       "src": "favicon.ico",
